day04/ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: dashboard.com-tls-ingress
spec: 
  rules: 
    - host: dashboard.com
      http: 
        paths: 
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: kubernetes-dashboard
                port: 
                  number: 80
  tls: 
    - hosts: 
        - dashboard.com
      secretName: server
